# mcJSON

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.old  README.md  README.old  cJSON.c  cJSON.h  cJSON_Utils.c  cJSON_Utils.h  mcJSON.c  mcJSON.h  mcJSON_Utils.c  mcJSON_Utils.h  test.c  test_utils.c
ci/: address-sanitizer.sh
test/: CMakeLists.txt  common.c  common.h  test-buffered-parse.c  test-file.c  test-files.c  test-objects.c  test-objects.ref  test_utils.c  test_utils.ref  tests.c
test/test-data/: CMakeLists.txt  test1.json.ref  test2.json.ref  test3.json.ref  test4.json.ref  test5.json.ref  test6.json
